--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <string name="app_name">Flipsy</string>
-    <string name="action_previous">Previous</string>
-    <string name="action_next">Next</string>
+    <string name="search">Search</string>
+    <string name="clear_search">Clear search</string>
+    <string name="search_hint">Search Etsy</string>
 
 </resources>
